--- a/fanficfare-git/PKGBUILD
+++ b/fanficfare-git/PKGBUILD
@@ -3,7 +3,7 @@
 _pkgname=FanFicFare
 pkgname=fanficfare-git
 pkgver=2.2.4.r0.g3d07257
-pkgrel=1
+pkgrel=2
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
 url="https://github.com/JimmXinu/${_pkgname}"
@@ -11,6 +11,7 @@ license=('Apache')
 depends=('python2' 'python2-beautifulsoup4' 'python2-chardet' 'python2-html5lib')
 makedepends=('git')
 provides=('fanficfare')
+conflicts=('fanficfare')
 source=("git://github.com/JimmXinu/${_pkgname}")
 sha256sums=('SKIP')
 
