--- a/kindletool-git/PKGBUILD
+++ b/kindletool-git/PKGBUILD
@@ -3,7 +3,7 @@
 _gitname=KindleTool
 pkgname=kindletool-git
 pkgver=1.6.3.r24.g6a3a3e5
-pkgrel=1
+pkgrel=2
 pkgdesc="Tool for creating/extracting Kindle updates and more"
 arch=('i686' 'x86_64')
 url="https://github.com/NiLuJe/${_gitname}"
@@ -11,6 +11,7 @@ license=('GPL')
 depends=('libarchive' 'nettle')
 makedepends=('git')
 provides=('kindletool')
+conflicts=('kindletool')
 source=("git://github.com/NiLuJe/${_gitname}.git")
 sha256sums=('SKIP')
 
