upgpkg: sigil-git 0.8.901.r20.ga1205d4-1
upstream release

- Curse of the lightweight tag :o
- Also add additional optional python modules currently recommended by
  upstream.
- Also, "Use proper method of updating icon cache." -- it would be
  helpful to commit the updated install file as well. :smack: :smack:

--- a/sigil-git/PKGBUILD
+++ b/sigil-git/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: David Mougey <imapiekindaguy at gmail dot com>
 
 pkgname=sigil-git
-pkgver=0.8.900.r27.gaaa6196
-pkgrel=2
+pkgver=0.8.901.r20.ga1205d4
+pkgrel=1
 pkgdesc="A WYSIWYG ebook editor"
 arch=('i686' 'x86_64')
 url="https://github.com/Sigil-Ebook/Sigil"
@@ -12,6 +12,9 @@ depends=('qt5-webkit' 'boost-libs' 'desktop-file-utils' 'minizip'
          'gtk-update-icon-cache' 'python-lxml' 'python-six')
 makedepends=('git' 'qt5-multimedia' 'qt5-tools ''qt5-svg ''cmake' 'boost')
 optdepends=('python-html5lib: recommended for plugins'
+            'python-chardet: recommended for plugins'
+            'python-cssselect: recommended for plugins'
+            'python-cssutils: recommended for plugins'
             'python-pillow: recommended for plugins'
             'python-regex: recommended for plugins')
 provides=("${pkgname%-git}")
@@ -22,7 +25,7 @@ md5sums=('SKIP')
 
 pkgver() {
     cd "${srcdir}/${pkgname%-git}"
-    git describe --long | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
