upgpkg: qbittorrent-git 3.2.5.r0.gc0ccf28-1
upstream release
Default build is now Qt5

--- a/qbittorrent-git/PKGBUILD
+++ b/qbittorrent-git/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributors: Ner0, Sevenseven
 
 pkgname=qbittorrent-git
-pkgver=3.2.4.r2.g522ff3b
-pkgrel=2
+pkgver=3.2.5.r0.gc0ccf28
+pkgrel=1
 pkgdesc="A bittorrent client written in C++ / Qt4 using the good libtorrent library (development version)"
 arch=('i686' 'x86_64')
 url="http://www.qbittorrent.org/"
