upgpkg: calibre-git 2.45.0.r100.g9ab8581-1
Force rebuild against new C++11 ABI
new tool in Polish Book requires optipng

--- a/calibre-git/PKGBUILD
+++ b/calibre-git/PKGBUILD
@@ -7,7 +7,7 @@
 # Contributor: Larry Hajali <larryhaja@gmail.com>
 
 pkgname=calibre-git
-pkgver=2.36.0.r20.g94f3ba6
+pkgver=2.45.0.r100.g9ab8581
 pkgrel=1
 pkgdesc="Ebook management application, from git"
 arch=('i686' 'x86_64')
@@ -19,7 +19,7 @@ depends=('python2-dateutil' 'python2-cssutils' 'python2-mechanize' 'mtdev'
          'python2-pyqt5' 'python2-psutil' 'icu' 'libmtp' 'python2-dbus'
          'python2-netifaces' 'python2-cssselect' 'python2-apsw'
          'qt5-webkit' 'desktop-file-utils' 'qt5-svg' 'python2-pygments'
-         'desktop-file-utils' 'gtk-update-icon-cache')
+         'desktop-file-utils' 'gtk-update-icon-cache' 'optipng')
 makedepends=('git' 'qt5-x11extras' 'xdg-utils')
 optdepends=('ipython2: to use calibre-debug'
             'udisks: required for mounting certain devices')
