upgpkg: fanficfare-git 2.2.17.r1.g679fcc9-1
upstream release

--- a/fanficfare-git/PKGBUILD
+++ b/fanficfare-git/PKGBUILD
@@ -4,7 +4,7 @@
 
 _pkgname=FanFicFare
 pkgname=fanficfare-git
-pkgver=2.2.16.r0.g4a82818
+pkgver=2.2.17.r1.g679fcc9
 pkgrel=1
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
