--- a/git-extras-git/PKGBUILD
+++ b/git-extras-git/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Joris Steyn <jorissteyn@gmail.com>
 # Contributor: Curtis McEnroe <programble@gmail.com>
 pkgname=git-extras-git
-pkgver=4.0.0.r10.ge7083de
-pkgrel=2
+pkgver=4.1.0.r1.g8a8a483
+pkgrel=1
 pkgdesc="GIT utilities -- repo summary, repl, changelog population, author commit percentages and more"
 arch=('any')
 url="https://github.com/tj/${pkgname%-git}"
