git-extras: Fix mistake that prevented package from building
In commit: d021b4362a85265aa9ea344b7a949aeaeea85ec3
source=() turned from an array into a string
I didn't notice when I adopted the package...

pacman 5 checks for that, and this became an error.

--- a/git-extras/PKGBUILD
+++ b/git-extras/PKGBUILD
@@ -9,7 +9,7 @@ arch=(any)
 url="https://github.com/tj/git-extras"
 license=('custom:MIT')
 depends=('git')
-source="https://github.com/tj/${pkgname}/archive/${pkgver}.tar.gz"
+source=("https://github.com/tj/${pkgname}/archive/${pkgver}.tar.gz")
 sha256sums=('d4c028e2fe78abde8f3e640b70f431318fb28d82894dde22772efe8ba3563f85')
 
 package() {
