upgpkg: firefox-extension-https-everywhere 5.1.3-2
- 5.1.3 didn't exist a month ago :confused:
- Actually download the new extension file, bump pkgver for people who
  updated to the old version.
- Also remove the install file warning, as this version passed full
  approval.
- Modify the source URL slightly to make it more immediately obvious
  that the pkgver is not enough of a change (also more semantically
  correct).

Note:
Re: #3, must change the `_file=______` with every update, AMO does *NOT*
have any other way of downloading a specific version. :(

--- a/firefox-extension-https-everywhere/PKGBUILD
+++ b/firefox-extension-https-everywhere/PKGBUILD
@@ -4,18 +4,17 @@
 _pkgname=https-everywhere
 pkgname=firefox-extension-${_pkgname}
 pkgver=5.1.3
-pkgrel=1
-_file=376291
+pkgrel=2
+_file=401970
 pkgdesc="Plugin for firefox which ensures you are using https whenever it's possible."
 license=('GPL2')
 arch=('any')
 url="https://www.eff.org/https-everywhere"
 depends=("firefox")
 makedepends=("unzip")
-install=https-everywhere.install
-source=("https://addons.mozilla.org/firefox/downloads/file/${_file}/${_pkgname}-${pkgver}.xpi")
+source=("${_pkgname}-${pkgver}.xpi::https://addons.mozilla.org/firefox/downloads/file/${_file}/")
 noextract=("${_pkgname}-${pkgver}.xpi")
-sha256sums=('9e0f21528df5a2fe2c1cf69b1ab3bccbfe5198eb52bb4291bf94a0e83be30b52')
+sha256sums=('23355371a2c647a65b3e82cceb36e9785fe675da9f26acb3482ed101923354d5')
 
 prepare() {
   cd "$srcdir"
