upgpkg: sigil-git 0.9.5.r4.g2f0182e-2
qt 5.6.0 rebuild

--- a/sigil-git/PKGBUILD
+++ b/sigil-git/PKGBUILD
@@ -8,8 +8,8 @@
 _localepurge=
 
 pkgname=sigil-git
-pkgver=0.9.1.r40.g449aed1
-pkgrel=1
+pkgver=0.9.5.r4.g2f0182e
+pkgrel=2
 pkgdesc="A WYSIWYG ebook editor"
 arch=('i686' 'x86_64')
 url="https://github.com/Sigil-Ebook/Sigil"
