upgpkg: qbittorrent-git 3.3.4.r490.gef6e848-1
Great hooks rebuild; remove now-useless install scriptlet.

--- a/qbittorrent-git/PKGBUILD
+++ b/qbittorrent-git/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributors: Ner0, Sevenseven
 
 pkgname=qbittorrent-git
-pkgver=3.3.1.r141.049e622
+pkgver=3.3.4.r490.gef6e848
 pkgrel=1
 pkgdesc="A bittorrent client powered by C++, Qt5 and the good libtorrent library (development version)"
 arch=('i686' 'x86_64')
@@ -14,7 +14,6 @@ makedepends=('boost' 'git' 'qt5-tools')
 optdepends=('python: needed for torrent search tab')
 conflicts=('qbittorrent')
 provides=('qbittorrent')
-install=qbittorrent.install
 source=("${pkgname%-*}::git+https://github.com/qbittorrent/qBittorrent.git")
 md5sums=('SKIP')
 
@@ -24,7 +23,7 @@ pkgver() {
   _tag=$(git tag -l | sort -r | head -n1 | tr -cd 0-9.)
   _rev=$(git rev-list --count release-${_tag}..HEAD)
   _hash=$(git rev-parse --short HEAD)
-  printf "%s.r%s.%s" "$_tag" "$_rev" "$_hash"
+  printf "%s.r%s.g%s" "$_tag" "$_rev" "$_hash"
 }
 
 build() {
