upgpkg: sigil-git 0.9.5.r32.g81277c2-1
Great hooks rebuild; remove now-useless install scriptlet.

--- a/sigil-git/PKGBUILD
+++ b/sigil-git/PKGBUILD
@@ -8,8 +8,8 @@
 _localepurge=
 
 pkgname=sigil-git
-pkgver=0.9.5.r4.g2f0182e
-pkgrel=2
+pkgver=0.9.5.r32.g81277c2
+pkgrel=1
 pkgdesc="A WYSIWYG ebook editor"
 arch=('i686' 'x86_64')
 url="https://github.com/Sigil-Ebook/Sigil"
@@ -27,7 +27,6 @@ optdepends=('hunspell-en: for English dictionary support'
             'python-regex: recommended for plugins')
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
-install=sigil.install
 source=("${pkgname%-git}"::"git+${url}"
         "0001-Set-environment-variable-for-Sigil-dictionaries.patch")
 sha256sums=('SKIP'
