--- a/fanficfare/PKGBUILD
+++ b/fanficfare/PKGBUILD
@@ -4,16 +4,17 @@
 
 _pkgname=FanFicFare
 pkgname=fanficfare
-pkgver=2.3.1
+pkgver=2.3.2
 pkgrel=1
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
 url="https://github.com/JimmXinu/${_pkgname}"
 license=('Apache')
 changelog=changelog.txt
-depends=('python2' 'python2-beautifulsoup4' 'python2-chardet' 'python2-html5lib')
-source=("${url}/archive/v${pkgver}.tar.gz")
-sha256sums=('d8825e7ffc79731cfe192b2110f649b6cf13899d637ec22a0b0ad2a058207300')
+depends=('python2' 'python2-beautifulsoup4' 'python2-chardet' 'python2-html5lib'
+         'python2-html2text')
+source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz")
+sha256sums=('f13f1bf3175deb9c3fe97b0b9c478b06e7cfeebd7d8d8a85f92c8600499baf4c')
 
 build() {
     cd "${srcdir}/${_pkgname}-${pkgver}"
