upgpkg: fanficfare-git 2.3.3.r0.geebb1ee-1
upstream release

--- a/fanficfare-git/PKGBUILD
+++ b/fanficfare-git/PKGBUILD
@@ -4,7 +4,7 @@
 
 _pkgname=FanFicFare
 pkgname=fanficfare-git
-pkgver=2.3.2.r0.ga593bd2
+pkgver=2.3.3.r0.geebb1ee
 pkgrel=1
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
