--- a/fanficfare-git/PKGBUILD
+++ b/fanficfare-git/PKGBUILD
@@ -4,7 +4,7 @@
 
 _pkgname=FanFicFare
 pkgname=fanficfare-git
-pkgver=2.3.4.r0.gf1d9760
+pkgver=2.3.5.r0.gf6d65c3
 pkgrel=1
 pkgdesc="A tool for downloading fanfiction to eBook formats"
 arch=('any')
