upgpkg: firefox-extension-https-everywhere 2017.10.30-1
upstream release
We are now webextensions

--- a/firefox-extension-https-everywhere/PKGBUILD
+++ b/firefox-extension-https-everywhere/PKGBUILD
@@ -5,7 +5,7 @@
 
 _pkgname=https-everywhere
 pkgname=firefox-extension-${_pkgname}
-pkgver=2017.10.24
+pkgver=2017.10.30
 pkgrel=1
 pkgdesc="Plugin for firefox which ensures you are using https whenever it's possible."
 license=('GPL2')
@@ -16,7 +16,7 @@ makedepends=("unzip")
 source=("${_pkgname}-${pkgver}.xpi::https://www.eff.org/files/https-everywhere-${pkgver}-eff.xpi"
         "${_pkgname}-${pkgver}.xpi.sig::https://www.eff.org/files/https-everywhere-${pkgver}-eff.xpi.sig")
 noextract=("${_pkgname}-${pkgver}.xpi")
-sha256sums=('42e1739f884bf3ccefe06cb02ac278e52ee2f5c572fe53b770026c21fd225308'
+sha256sums=('b437666513b3150f5fd6f09a2390cfcadeb6b76a0b71de2cb132a22d5b7894ce'
             'SKIP')
 validpgpkeys=('1073E74EB38BD6D19476CBF8EA9DBF9FB761A677') # William Budington
 
@@ -29,10 +29,14 @@ prepare() {
 package() {
   cd "${srcdir}"
 
-  _extension_id="$(sed -n '/.*<em:id>\(.*\)<\/em:id>.*/{s//\1/p;q}' ${_pkgname}-${pkgver}/install.rdf)"
+  if [[ -f ${_pkgname}-${pkgver}/install.rdf ]]; then
+    _extension_id="$(sed -n '/.*<em:id>\(.*\)<\/em:id>.*/{s//\1/p;q}' ${_pkgname}-${pkgver}/install.rdf)"
+  else
+    _extension_id="$(sed -n 's/.*"id": "\(.*\)".*/\1/p' ${_pkgname}-${pkgver}/manifest.json)"
+  fi
   _extension_dest="${pkgdir}/usr/lib/firefox/browser/extensions/${_extension_id}"
   # Should this extension be unpacked or not?
-  if grep '<em:unpack>true</em:unpack>' ${_pkgname}-${pkgver}/install.rdf > /dev/null; then
+  if grep -q '<em:unpack>true</em:unpack>' ${_pkgname}-${pkgver}/install.rdf 2>/dev/null; then
     install -dm755 "${_extension_dest}"
     cp -R ${_pkgname}-${pkgver}/* "${_extension_dest}"
     chmod -R ugo+rX "${_extension_dest}"
