--- a/lastpass/PKGBUILD
+++ b/lastpass/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Eli Schwartz <eschwartz@archlinux.org>
 
 pkgname=lastpass
-pkgver=4.2.1.21
+pkgver=4.2.3.20
 pkgrel=1
 _universalver=4.1.44
 _chromever=4.1.52
-_amo_file=765898
+_amo_file=800645
 _crx_id=hdokiejnpimakedhajhdlcegeplioahd
 pkgdesc="The Universal LastPass installer for Firefox, Chrome, and Opera"
 arch=('i686' 'x86_64')
@@ -20,17 +20,19 @@ options=('!strip')
 # Apparently, API endpoints are all the rage -- so this isn't actually a file...
 source=("${pkgname}-${pkgver}.xpi::https://addons.mozilla.org/firefox/downloads/file/${_amo_file}/"
         "lpchrome-${_chromever}.crx::${url}/lpchrome_linux.crx"
-        "lplinux-${_universalver}.tar.bz2::${url}/lplinux.tar.bz2"
+        "lplinux-${_universalver}v2.tar.bz2::${url}/lplinux.tar.bz2"
         "com.lastpass.nplastpass.json"
+        "firefox-com.lastpass.nplastpass.json"
         "lastpass_policy_sources.json"
         "lastpass_policy_install.json"
         "License.txt")
 noextract=("${pkgname}-${pkgver}.xpi"
            "lpchrome-${_chromever}.crx")
-sha256sums=('c663a19a31b41a2ccf84c6ee4c5d592c5c570c7b8e22dbd59e00911ca0dffc43'
+sha256sums=('cb837b4d738d51fac1d4361b7ac50cac1fc2828c2848057f10f88220aff77380'
             '47937f48972b73f024a1e616547405d41e368cb3756f97958423d20d2196762d'
-            'adb0e91f8d212d34dbb85db0b11738fe36db1a741ad5674d7070c4019a9fc75e'
+            '22690e30f5670205df2e5508ae799757b81060aa25b33bb115eeea6ba90e4425'
             'e8eb3b585809d6644807727c5bd0a74ead96dd2c5a7e6d2ce29e0b6ea28b9e59'
+            '82af9e9296f92e92ca325449e0c2b2deb3c21f65afea45aeb823090cb32aad76'
             'f82b920620575654fcbc0baf9b5d6c275835cbfc05b779ad309de5c6411c8bc9'
             '1c061cb5352d84dd6cde4dd6ce3889d41a31fd38acc4d97a7d69709e3d5ac693'
             '17a871edf1134c498f6e91465f5b3138ba5af7d822e4c253cda81ab929906388')
@@ -68,8 +70,14 @@ package() {
         install -Dm644 ${pkgname}-${pkgver}.xpi "${_extension_dest}.xpi"
     fi
 
+    # This cannot use the same (unified) file as chromium. Although chromium
+    # ignores the Mozilla-specific key in *its* native messaging hosts
+    # description, and continues to work, Firefox refuses to recognize the
+    # binary plugin if unknown (chromium-specific) keys are present.
+    install -Dm644 firefox-com.lastpass.nplastpass.json "$pkgdir"/usr/lib/mozilla/native-messaging-hosts/com.lastpass.nplastpass.json
+
     # Chrome(ium)
-    install -Dm755 lplinux/nplastpass$_64 "$pkgdir"/usr/lib/lastpass/nplastpass
+    install -Dm755 nplastpass$_64 "$pkgdir"/usr/lib/lastpass/nplastpass
     for i in opt/chrome chromium chromium-dev; do
         install -Dm644 com.lastpass.nplastpass.json "$pkgdir"/etc/$i/native-messaging-hosts/com.lastpass.nplastpass.json
         install -Dm644 lastpass_policy_sources.json "$pkgdir"/etc/$i/policies/managed/lastpass.json
