upgpkg: pacman-git 5.0.1.249.g27f64e37-2
arm $CARCH does not work with "auto"

--- a/pacman-git/PKGBUILD
+++ b/pacman-git/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=pacman-git
 pkgver=5.0.1.249.g27f64e37
-pkgrel=1
+pkgrel=2
 pkgdesc="A library-based package manager with dependency support. git version."
 arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 url="https://www.archlinux.org/pacman/"
@@ -29,7 +29,7 @@ source=(git+https://git.archlinux.org/pacman.git
 sha256sums=('SKIP'
             '0c087d26e80333267391a6e9e34b95a2ffb103cb9391cb53cc5d97ad954af774'
             'c5a3ec55f9d1bc52e5e5b127f76b7b16b79738268691a3e1d842359033e460da'
-            'aa28a1e4050a5a256d9832a584b331b9c783ff3a1859289c4cdd4eb31556081c'
+            '2d17478fd607c75e396fe10ef2add8bc9fcc12054810fb6f4409dfb70e01989e'
             '6066d67d818ee36760bf121c76d5019130f7875b3e5ed179b319b810a3a9685b')
 
 pkgver() {
@@ -71,7 +71,9 @@ package() {
   # install Arch specific stuff
   install -dm755 "$pkgdir/etc"
   if [[ $CARCH =~ arm* || $CARCH = aarch64 ]]; then
-    install -m644 "$srcdir/pacman.conf.arm" "$pkgdir/etc/pacman.conf"
+    # $CARCH != uname -m
+    sed -e "s|@CARCH[@]|$CARCH|g" "$srcdir/pacman.conf.arm" \
+      | install -m644 /dev/stdin "$pkgdir/etc/pacman.conf"
   else
     install -m644 "$srcdir/pacman.conf.$CARCH" "$pkgdir/etc/pacman.conf"
   fi
