upgpkg: calibre-git 3.30.0.r18.g2447be653b-1
merge changes from community/calibre
"fix" build by removing manpages; sphinx somehow chokes on the i18n
regenerate offline user-agent-data

--- a/calibre-git/PKGBUILD
+++ b/calibre-git/PKGBUILD
@@ -9,20 +9,21 @@
 # All my PKGBUILDs are managed at https://github.com/eli-schwartz/pkgbuilds
 
 pkgname=calibre-git
-pkgver=3.27.1.r3.g10d61771fb
+pkgver=3.30.0.r18.g2447be653b
 pkgrel=1
 _mathjax_commit=c493143c02f5809b1112af6c5a2c8eab31050118
-pkgdesc="Ebook management application, from git"
+pkgdesc="Ebook management application"
 arch=('i686' 'x86_64')
 url="https://calibre-ebook.com/"
 license=('GPL3')
-depends=('chmlib' 'icu' 'libmtp' 'libusbx' 'libwmf' 'mtdev' 'optipng' 'podofo'
+depends=('chmlib' 'icu' 'jxrlib' 'libmtp' 'libusbx' 'libwmf' 'mtdev' 'optipng' 'podofo'
          'poppler' 'python2-apsw' 'python2-cssselect'
          'python2-cssutils' 'python2-dateutil' 'python2-dbus' 'python2-dnspython'
          'python2-dukpy' 'python2-html5-parser' 'python2-mechanize' 'python2-msgpack'
          'python2-netifaces' 'python2-unrardll' 'python2-pillow' 'python2-psutil'
          'python2-pygments' 'python2-pyqt5' 'python2-regex' 'qt5-svg' 'qt5-webkit')
-makedepends=('git' 'qt5-x11extras' 'sip' 'xdg-utils' 'rapydscript-ng' 'python2-sphinx')
+makedepends=('git' 'qt5-x11extras' 'sip' 'xdg-utils' 'rapydscript-ng') #'python2-sphinx')
+checkdepends=('xorg-server-xvfb')
 optdepends=('ipython2: to use calibre-debug')
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
@@ -33,7 +34,7 @@ source=("git+https://github.com/kovidgoyal/${pkgname%-git}.git?signed"
 sha256sums=('SKIP'
             'SKIP'
             'be89d68cde2d996e82b813d83704ed6dceed5a86467285be6ed37f0a20bb65b4'
-            '6e556d641df670fd74947776001d970216bf24f26389c1575bc11a10a92ee96d')
+            'b6da5e354a167f000462cf7964132c6e0749e16588249ef75ab31a62230561b8')
 validpgpkeys=('3CE1780F78DD88DF45194FD706BC317B515ACE7C') # Kovid Goyal (New longer key) <kovid@kovidgoyal.net>
 
 pkgver() {
@@ -71,12 +72,24 @@ build() {
   LANG='en_US.UTF-8' python2 setup.py translations
   LANG='en_US.UTF-8' python2 setup.py gui
   LANG='en_US.UTF-8' python2 setup.py resources
-  LANG='en_US.UTF-8' python2 setup.py man_pages
+
+  # manpages simply don't build at the moment:
+  # https://github.com/sphinx-doc/sphinx/issues/5150
+  #LANG='en_US.UTF-8' python2 setup.py man_pages
+
   # This tries to download new user-agent data, so pre-seed a
   # recently-generated copy to allow offline builds.
   cp ../user-agent-data.json resources/
   LANG='en_US.UTF-8' python2 setup.py recent_uas || true
   LANG='en_US.UTF-8' python2 setup.py mathjax --path-to-mathjax="${srcdir}/MathJax-${_mathjax_commit}"
+}
+
+check() {
+  cd "${srcdir}/${pkgname%-git}"
+
+  # without xvfb-run this fails with much "Control socket failed to recv(), resetting"
+  # ERROR: test_websocket_perf (calibre.srv.tests.web_sockets.WebSocketTest)
+  LANG='en_US.UTF-8' xvfb-run python2 setup.py test
 }
 
 package() {
@@ -90,7 +103,7 @@ package() {
   XDG_DATA_DIRS="${pkgdir}/usr/share" LANG='en_US.UTF-8' python2 setup.py install \
     --staging-root="${pkgdir}/usr" --prefix=/usr
 
-  cp -a man-pages/ "${pkgdir}/usr/share/man"
+  #cp -a man-pages/ "${pkgdir}/usr/share/man"
 
   install -Dm644 resources/calibre-mimetypes.xml "${pkgdir}/usr/share/mime/packages/calibre-mimetypes.xml"
 
@@ -98,6 +111,10 @@ package() {
       "${pkgdir}/usr/lib/calibre/calibre/constants.py"
 
   # Compiling bytecode FS#33392
-  python2 -m compileall -d '/' "${pkgdir}/"
-  python2 -O -m compileall -d '/' "${pkgdir}/"
+  # This is kind of ugly but removes traces of the build root.
+  while read -rd '' _file; do
+    _destdir="$(dirname "${_file#${pkgdir}}")"
+    python2 -m compileall -d "${_destdir}" "${_file}"
+    python2 -O -m compileall -d "${_destdir}" "${_file}"
+  done < <(find "${pkgdir}"/usr/lib/ -name '*.py' -print0)
 }
