cinnamon-desktop-git: add forgotten git makedepends

--- a/cinnamon-desktop-git/PKGBUILD
+++ b/cinnamon-desktop-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/linuxmint/${pkgname%-git}"
 license=('GPL' 'LGPL')
 depends=('accountsservice' 'gtk3' 'libxkbfile' 'libpulse')
-makedepends=('meson' 'gobject-introspection' 'intltool')
+makedepends=('git' 'meson' 'gobject-introspection' 'intltool')
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
 source=("git+${url}.git"
