upgpkg: pacman-git 5.1.1.r221.g8f89e509-1
sync makepkg.conf changes from master

--- a/pacman-git/makepkg.conf
+++ b/pacman-git/makepkg.conf
@@ -40,11 +40,13 @@ CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
 CXXFLAGS="@CARCHFLAGS@ -mtune=generic -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
+#RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
 #MAKEFLAGS="-j2"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
+#DEBUG_RUSTFLAGS="-C debuginfo=2"
 
 #########################################################################
 # BUILD ENVIRONMENT
@@ -140,9 +142,6 @@ COMPRESSLZ=(lzip -c -f)
 #########################################################################
 # EXTENSION DEFAULTS
 #########################################################################
-#
-# WARNING: Do NOT modify these variables unless you know what you are
-#          doing.
 #
 PKGEXT='.pkg.tar.xz'
 SRCEXT='.src.tar.gz'
