pacman-static: nvchecker port over to v2
Which for inexplicable reasons decided to inflict the ugliness of *.toml
on me. So yay for pointlessly reformatting every line in the file, and
making it twice as verbose and half as readable.

This would be livable if there were any rationale offered for why the
switch was made, but @lilydjwg has merely noted in the documentation "it
has been changed because I said so, here's a script to migrate your
config file and totally fail to produce something usable".

This limited config is so simple it doesn't actually break, fortunately.

--- a/pacman-static/nvchecker-deps.ini
+++ b/pacman-static/nvchecker-deps.ini
@@ -1,39 +1,51 @@
 [__config__]
-oldver = nvchecker-old.txt
-newver = nvchecker-new.txt
+oldver = "nvchecker-old.txt"
+newver = "nvchecker-new.txt"
 
 [c-ares]
-archpkg = c-ares
+source = "archpkg"
+archpkg = "c-ares"
 
 [nghttp2]
-archpkg = libnghttp2
+source = "archpkg"
+archpkg = "libnghttp2"
 
 [curl]
-archpkg = curl
+source = "archpkg"
+archpkg = "curl"
 
 [ssl]
-archpkg = openssl
+source = "archpkg"
+archpkg = "openssl"
 
 [zlib]
-archpkg = zlib
+source = "archpkg"
+archpkg = "zlib"
 
 [xz]
-archpkg = xz
+source = "archpkg"
+archpkg = "xz"
 
 [bzip]
-archpkg = bzip2
+source = "archpkg"
+archpkg = "bzip2"
 
 [zstd]
-archpkg = zstd
+source = "archpkg"
+archpkg = "zstd"
 
 [libarchive]
-archpkg = libarchive
+source = "archpkg"
+archpkg = "libarchive"
 
 [gpgerror]
-archpkg = libgpg-error
+source = "archpkg"
+archpkg = "libgpg-error"
 
 [libassuan]
-archpkg = libassuan
+source = "archpkg"
+archpkg = "libassuan"
 
 [gpgme]
-archpkg = gpgme
+source = "archpkg"
+archpkg = "gpgme"
